--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,13 +3,13 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-
+  padding: 6rem;
   min-height: 100vh;
 }
 
 .description {
   display: inherit;
-
+  justify-content: inherit;
   align-items: inherit;
   font-size: 0.85rem;
   max-width: var(--max-width);
